--- a/src/public/css/projectfullview.css
+++ b/src/public/css/projectfullview.css
@@ -105,7 +105,6 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 20px;
     margin-left: 25px;
     min-height: 100vh;
     min-width: 800px;
@@ -246,4 +245,115 @@ body{
 }
 .user{
     text-decoration: none;
+}
+
+.maincaro {
+    min-height: 100dvh;
+    display: flex;
+    align-items: center;
+    font-family: "Satoshi", sans-serif;
+    font-size: var(--lx-text-01);
+    font-weight: 500;
+    color: #ffffe6;
+}
+
+.carousel-container {
+    width: 80%;
+    margin: auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: var(--lx-gap);
+
+    .carousel {
+        aspect-ratio: 16/9;
+        width: 100%;
+        position: relative;
+        overflow: hidden;
+
+        .item {
+            opacity: 0;
+            width: 100%;
+            height: 100%;
+            display: none;
+            transition: opacity 0.5s ease-in-out;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center;
+            }
+
+            .caption {
+                width: 100%;
+                padding: var(--lx-space-01);
+                position: absolute;
+                bottom: 0;
+                text-transform: uppercase;
+                text-align: center;
+                font-size: 12px;
+                background-color: rgba(0, 0, 0, 0.5);
+            }
+
+            &.active {
+                opacity: 1;
+                display: block;
+            }
+        }
+    }
+
+    .btn {
+        padding: 1em 2em;
+        position: absolute;
+        transform: translateY(-50%);
+        top: 50%;
+        outline: none;
+        border: none;
+        cursor: pointer;
+        text-transform: uppercase;
+        font-size: 12px;
+        font-weight: 900;
+        color: #10100e;
+        background-color: var(--SoftGray);
+        transition: transform 0.2s ease-in-out;
+
+        &:active,
+        &:focus {
+            transform: translateY(-50%) scale(0.9);
+        }
+
+        &:hover {
+            transform: translateY(-50%) scale(0.96);
+        }
+    }
+
+    .prev {
+        left: -5%;
+    }
+
+    .next {
+        right: -5%;
+    }
+
+    .dots {
+        padding-top: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+
+        .dot {
+            cursor: pointer;
+            height: 5px;
+            width: 40px;
+            background-color: var(--Black);
+            transition: background-color 0.2s ease;
+
+            &.active,
+            &:hover {
+                background-color: var(--SoftGray);
+            }
+        }
+    }
 }
