--- a/src/public/css/navbar.css
+++ b/src/public/css/navbar.css
@@ -60,10 +60,17 @@ body{
     align-items: center;
     margin-right: 30px;
 }
+.search-icon-wrapper{
+    margin-top: 10px;
+    display: flex;
+
+}
 
 .search-icon{
     height: 20px;
     margin-right: 20px;
+    align-self: center;
+    justify-self: center;
 }
 
 .profile-icon{
@@ -71,7 +78,7 @@ body{
 }
 
 .profile-pic{
-    height: 40px;
+    height:40px;
     width:40px;
     border-radius: 100px;
 }
@@ -83,7 +90,7 @@ body{
     justify-content: center;
     background-color: var(--GrayishWhite);
     border-radius: 100px;
-    margin: 10px 12px 10px 10px;
+    margin: 12px 12px 10px 10px;
     height: 40px;
     width: 40px;
 }
