--- a/src/public/css/navbar.css
+++ b/src/public/css/navbar.css
@@ -61,7 +61,8 @@ body{
     margin-right: 30px;
 }
 .search-icon-wrapper{
-    margin-top: 10px;
+    margin-top
+    : 10px;
     display: flex;
 
 }
