--- a/src/public/css/navbar.css
+++ b/src/public/css/navbar.css
@@ -21,7 +21,7 @@ body{
     min-width: 1430px;
 }
 
-.logo-wrapper .text{
+.logo-wrapper .profile-wrapper-text{
     display: flex;
     align-items: center;
 }
@@ -40,11 +40,11 @@ body{
     margin-left: 2px;
 }
 
-.profile-wrapper .text{
+.profile-wrapper .profile-wrapper-text{
     color: var(--GrayishWhite);
 }
 
-.profile-wrapper .text{
+.profile-wrapper .profile-wrapper-text{
     text-decoration: none;
     color: #222222;
     font-weight: bold;
@@ -61,8 +61,7 @@ body{
     margin-right: 30px;
 }
 .search-icon-wrapper{
-    margin-top
-    : 10px;
+    margin-top: 10px;
     display: flex;
 
 }
