--- a/src/public/css/projectfullview.css
+++ b/src/public/css/projectfullview.css
@@ -358,11 +358,91 @@ body{
 
 .favorite-btn{
     background-color: transparent;
-    padding: 0px;
+    padding: 0;
     border: none;
     height: 40px;
 }
 
 .favorite-btn img{
     height: 100%;
+}
+
+/*Comments*/
+.container{
+    align-items: center;
+    justify-content: center;
+}
+.container-comments{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 40px;
+}
+
+.forms input{
+    outline: 0;
+    background: var(--SoftGray);
+    min-width: 250px;
+    height: 25px;
+    overflow: scroll;
+    margin: 0 0 1rem;
+    padding: 15px;
+    font-size: 14px;
+    border-radius: 10px;
+    border-color: transparent;
+    transition: all 0.3s;
+}
+.forms input:focus{
+    border-color: var(--Gray);
+}
+
+
+
+.forms button{
+    outline: 0;
+    background: var(--Gray);
+    border: 0;
+    text-decoration: none;
+    padding: 15px;
+    color: var(--GrayishWhite);
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 10px;
+    width: 20px;
+    max-width: 50%;
+    min-width: 120px;
+}
+
+.forms button:hover {
+    background: var(--Black);
+    color: var(--GrayishWhite);
+    transition-duration: 1.5s;
+    transition-timing-function: ease;
+}
+.title{
+    color: var(--Gray);
+    font-size: 20px;
+    margin: 10px 0 1rem;
+    font-family: 'Open Sans', sans-serif;
+}
+
+li{
+    list-style: none;
+    font-family: 'Open Sans', sans-serif;
+}
+
+#excluirbtn{
+    background: transparent;
+    border: none;
+    color: red;
+}
+.list-group-item-main{
+    border-bottom: solid 0.5px #7a7979;
+}
+span{
+    font-family: 'Open Sans', sans-serif;
+    position: relative;
+    margin: 0 0 10px 0;
+    color: red;
 }
