fix: arrumar publicação de comentários

--- a/src/public/css/projectfullview.css
+++ b/src/public/css/projectfullview.css
@@ -412,6 +412,7 @@ body{
     width: 20px;
     max-width: 50%;
     min-width: 120px;
+    margin-bottom: 5px;
 }
 
 .forms button:hover {
@@ -446,3 +447,21 @@ span{
     margin: 0 0 10px 0;
     color: red;
 }
+.close-modal{
+    position: absolute;
+    right: 16px;
+    top: 8px;
+    cursor: pointer;
+
+}
+.close-modal-img{
+    width: 12px;
+}
+
+.list-group-item-main p{
+
+    max-width: 400px;
+
+}
+
+
