--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -149,4 +149,156 @@ a.btn.btn-primary.active{
 }
 
 /*Projeto(Card)*/
+.card-image {
+    display: block;
+    min-height: 20rem; /* layout hack */
+    background: #fff center center no-repeat;
+    background-size: cover;
+    filter: blur(3px); /* blur the lowres image */
+    overflow: hidden;
+}
 
+.card-image > img {
+    display: block;
+    width: 100%;
+    opacity: 0; /* visually hide the img element */
+}
+
+.card-image.is-loaded {
+    filter: none; /* remove the blur on fullres image */
+    transition: filter 1s;
+}
+
+
+
+
+/* Layout Styles */
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    font-size: 16px;
+    font-family: sans-serif;
+}
+
+.card-list {
+    display: block;
+    margin: 1rem auto;
+    padding: 0;
+    font-size: 0;
+    text-align: center;
+    list-style: none;
+}
+
+.card {
+    display: inline-block;
+    width: 90%;
+    max-width: 20rem;
+    margin: 1rem;
+    font-size: 1rem;
+    text-decoration: none;
+    overflow: hidden;
+    box-shadow: 0 0 3rem -1rem rgba(0,0,0,0.5);
+    transition: transform 0.1s ease-in-out, box-shadow 0.1s;
+}
+
+.card:hover {
+    transform: translateY(-0.5rem) scale(1.0125);
+    box-shadow: 0 0.5em 3rem -1rem rgba(0,0,0,0.5);
+}
+
+.card-description {
+    display: block;
+    padding: 1em 0.5em;
+    color: #515151;
+    text-decoration: none;
+}
+
+.card-description > h2 {
+    margin: 0 0 0.5em;
+}
+
+.card-description > p {
+    margin: 0;
+}
+/*Perfil*/
+.navbar-section{
+    min-height: 90px;
+}
+.main-perfil{
+    width: 100vh;
+    height: 100%;
+    padding: 20px;
+    border-radius: 20px;
+    background-color: #e6e4e4;
+    font-family: "Heebo", sans-serif;
+}
+.img-holder{
+    width: 100px; /* width of container */
+    height: 100px; /* height of container */
+    object-fit: cover;
+    object-position: 15% 40%; /* try 20px 10px */
+    border-radius: 100px;
+}
+.nickname{
+    font-weight: 800;
+    font-size: 18px;
+}
+.name{
+    font-weight: 400;
+    font-size: 14px;
+}
+
+/*disp button*/
+.disp-btn{
+    display: flex;
+    align-items: center;
+    width: 80vh;
+    height: 20px;
+    justify-content: center;
+    margin-top: 10px;
+    border-radius: 20px;
+    min-width: 190px;
+    color: white;
+    padding: 20px 0 20px 0;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.green-disp-btn{
+    background-color: #03A814;
+}
+
+
+
+.green-disp-btn:hover{
+    background: #028e0d;
+    color: white;
+    transition-duration: 1.5s;
+    transition-timing-function: ease;
+}
+.red-disp-btn{
+    background-color: #FF0000;
+}
+.red-disp-btn:hover{
+    background-color: #c60101;
+    color: white;
+    transition-duration: 1.5s;
+    transition-timing-function: ease;
+}
+
+.disp-info-icon{
+    height: 20px;
+    left: 40px;
+    position: relative;
+}
+
+#disp-info-text{
+    position: absolute;
+    background-color: #d1d1d1;
+    width: 90vh;
+    top: 140px;
+    border-radius: 8px;
+    text-align: justify;
+}
