--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -101,6 +101,10 @@
     height: 40vh;
     min-height: 400px;
 }
+.perfil-section{
+    background-color: rgba(0, 0, 0, 0.78);
+
+}
 .hero-section .container{
     min-height: 400px;
     height: 45vh;
