--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -324,6 +324,7 @@ html, body {
 }
 #edt-btn:hover{
     border-color: transparent;
+    color: white;
 }
 
 #follow-btn{
@@ -338,3 +339,97 @@ html, body {
     border-color: transparent;
     color: white;
 }
+/*My projects/favoritos - perfil*/
+
+#my-project {
+    background-color: rgba(0, 0, 0, 0.08);
+    color: white;
+    border-radius: 0;
+    border: none;
+}
+#my-project.active{
+    background-color: rgba(0, 0, 0, 0.51);
+}
+#my-project.btn.btn-primary.active:before{
+    visibility: hidden;
+}
+
+#fav{
+    background-color: rgba(0, 0, 0, 0.08);
+    color: white;
+    border-radius: 0;
+    border: none;
+}
+/*Portifolio perfil*/
+.padded {
+    padding: 100px 0;
+}
+.wrapper-grey {
+    background: #F4F4F4;
+}
+.avatar {
+    width: 30px;
+    border-radius: 50%;
+}
+.avatar-bordered {
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+    border: white 1px solid;
+}
+.avatar-large {
+    width: 50px;
+}
+
+
+.cards {
+    height: 250px;
+    text-shadow: 0 1px 3px rgba(0,0,0,0.6);
+    background-size: cover !important;
+    color: white;
+    position: relative;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+.card-user {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+.card-category {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    font-size: 20px;
+}
+.card-description {
+    position: absolute;
+    bottom: 1px;
+    left: 10px;
+}
+.card-description h2 {
+    font-size: 22px;
+    color: white;
+}
+
+.card-link {
+    position: relative;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    z-index:2;
+    background: black;
+    opacity: 0;
+}
+.card-link:hover{
+    opacity: 0.1;
+}
+.features img {
+    width: 100px;
+}
+.features h2 {
+    font-size: 20px;
+}
+.features p {
+    font-size: 15px;
+    font-weight: lighter;
+}
+
