style: adicionando modais de seguindo e seguidores

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -439,6 +439,8 @@ html, body {
     width: 30%;
     background-color: rgba(143, 143, 143, 0.58);
 }
+/*Seguidores - seguidos modal perfil*/
+
 /*Feed*/
 .carousel-inner, .carousel-item{
     width: 50vh;
