--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -554,3 +554,55 @@ span {
     object-position: 15% 40%; /* try 20px 10px */
     border-radius: 100px;
 }
+.tags{
+    margin:0;
+    padding:0;
+    list-style:none;
+}
+.tags li{
+    float: left;
+    height: 24px;
+    line-height: 24px;
+    position: relative;
+    font-size: 11px;
+    margin: 2px 5px 2px 12px;
+    padding: 0 10px 0 12px;
+    background: #4b4b4c;
+    color: #fff;
+    text-decoration: none;
+    -moz-border-radius-bottomright: 4px;
+    -webkit-border-bottom-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    -moz-border-radius-topright: 4px;
+    -webkit-border-top-right-radius: 4px;
+    border-top-right-radius: 4px;
+}
+.tags li:before {
+    content: "";
+    float: left;
+    position: absolute;
+    top: 0;
+    left: -12px;
+    width: 0;
+    height: 0;
+    border-color: transparent #4b4b4c transparent transparent;
+    border-style: solid;
+    border-width: 12px 12px 12px 0;
+}
+
+.tags li:after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: 0;
+    float: left;
+    width: 4px;
+    height: 4px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    background: #222222;
+    -moz-box-shadow: -1px -1px 2px #343435;
+    -webkit-box-shadow: -1px -1px 2px #343435;
+    box-shadow: -1px -1px 2px #343435;
+}
