--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -84,6 +84,49 @@
     }
 }
 
+.searchbar{
+    margin-bottom: auto;
+    margin-top: auto;
+    height: 40px;
+    background-color: transparent;
+    border-radius: 30px;
+    padding: 10px;
+    align-items: center;
+    display: flex;
+}
+
+.search_input{
+    color: white;
+    border: 0;
+    outline: 0;
+    background: none;
+    width: 0;
+    caret-color:transparent;
+    line-height: 40px;
+    transition: width 0.4s linear;
+}
+.searchbar:hover{
+    background-color:#434343
+}
+.searchbar:hover > .search_input{
+    padding: 0 10px;
+    width: 250px;
+    caret-color:white;
+    transition: width 0.4s linear;
+
+}
+
+.searchbar:hover > .search_icon{
+    color: white;
+}
+
+.search_icon{
+    float: right;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration:none;
+}
 /*hero section*/
 
 .hero-section{
