--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -656,3 +656,19 @@ span {
     background-color:#343435;
 }
 
+.custom-pagination {
+    margin: 0 2px;
+}
+
+
+.custom-pagination .pagination {
+    display: flex;
+
+    justify-content: center;
+    margin-top: 20px;
+    color: #919191;
+}
+
+.custom-pagination .summary {
+    display: none;
+}
